[package]
name = "source-map-cache"
version = "0.0.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/piot/source-map-cache"
description = "Source map cache"

[dependencies]
seq-map = "0.0.13"
pathdiff = "0.2.3"
source-map-node = "0.0.1"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
